--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,9 @@
 @import "base";
 @import "typography";
 
+@import "variables";
+@import "layout";
+
 @import "sidebar";
 @import "header";
 @import "realtors";
@@ -9,3 +12,4 @@
 @import "homes";
 @import "gallery";
 @import "footer";
+@import "resets";
