Adding the features section

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,4 +1,11 @@
 .features {
-	background-color: $color-grey-dark-2;
 	grid-column: center-start / center-end;
+
+	margin: 15rem 0;
+
+	display: grid;
+	// display:grid makes this grid component also grid container
+	grid-template-columns: repeat(3, 1fr);
+
+	grid-gap: 6rem;
 }
