--- a/sass/main.css
+++ b/sass/main.css
@@ -9,11 +9,6 @@
       grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 }
 
-.container > * {
-  padding: 40px;
-  font-size: 3rem;
-}
-
 .sidebar {
   background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
@@ -31,8 +26,13 @@
 }
 
 .features {
-  background-color: #6d5d4b;
   grid-column: center-start / center-end;
+  margin: 15rem 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 6rem;
 }
 
 .story__pictures {
