--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -9,3 +9,22 @@
 
 	grid-gap: 6rem;
 }
+
+.feature {
+	display: grid;
+	grid-template-columns: min-content 1fr;
+	grid-row-gap: 1.5rem;
+	grid-column-gap: 2.5rem;
+
+	&__icon {
+		fill: $color-primary;
+		//fill is the syntax to change the color of an SVG
+		width: 4.5rem;
+		height: 4.5rem;
+		grid-row: 1 / span 2;
+	}
+
+	&__text {
+		font-size: 1.7rem;
+	}
+}
