--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -7,5 +7,23 @@
 	&__content {
 		background-color: $color-grey-light-1;
 		grid-column: col-start 5 / full-end;
+
+		padding: 6rem 8vw;
+
+		//grid way
+		display: grid;
+		align-content: center;
+		justify-items: start;
+
+		//flexbox way
+		// display: flex;
+		// flex-direction: column;
+		// justify-content: center;
+		// align-items: flex-start;
+	}
+
+	&__text {
+		font-size: 1.5rem;
+		font-style: italic;
 	}
 }
