--- a/sass/main.css
+++ b/sass/main.css
@@ -36,6 +36,26 @@ body {
   font-weight: 400;
 }
 
+.heading-2 {
+  font-size: 4rem;
+  font-style: italic;
+  line-height: 1;
+}
+
+.heading-2--light {
+  color: #f9f7f6;
+}
+
+.heading-2--dark {
+  color: #54483a;
+}
+
+.heading-3 {
+  font-size: 1.6rem;
+  color: #c69963;
+  text-transform: uppercase;
+}
+
 .heading-4 {
   font-size: 1.9rem;
 }
@@ -46,6 +66,44 @@ body {
 
 .heading-4--dark {
   color: #54483a;
+}
+
+.btn {
+  background-color: #c69963;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.btn:hover {
+  background-color: #b28451;
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+
+.mb-md {
+  margin-bottom: 3rem;
+}
+
+.mb-lg {
+  margin-bottom: 4rem;
+}
+
+.mb-xl {
+  margin-bottom: 6rem;
+}
+
+.mb-xxl {
+  margin-bottom: 8rem;
 }
 
 .sidebar {
@@ -110,6 +168,17 @@ body {
 .story__content {
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end;
+  padding: 6rem 8vw;
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  justify-items: start;
+}
+
+.story__text {
+  font-size: 1.5rem;
+  font-style: italic;
 }
 
 .homes {
