--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -26,7 +26,8 @@ body {
 
 .heading-2 {
   font-size: 4rem;
-  font-style: italic; }
+  font-style: italic;
+  line-height: 1; }
   .heading-2--light {
     color: #f9f7f6; }
   .heading-2--dark {
@@ -43,6 +44,35 @@ body {
     color: #f9f7f6; }
   .heading-4--dark {
     color: #54483a; }
+
+.btn {
+  background-color: #c69963;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+  transition: all .3s; }
+  .btn:hover {
+    background-color: #b28451; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-xl {
+  margin-bottom: 6rem; }
+
+.mb-xxl {
+  margin-bottom: 8rem; }
 
 .sidebar {
   background-color: #c69963;
@@ -81,12 +111,28 @@ body {
 
 .story__pictures {
   background-color: #c69963;
-  grid-column: full-start / col-end 4; }
+  grid-column: full-start / col-end 4;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr); }
+
+.story__img-1 {
+  width: 100%; }
+
+.story__img-2 {
+  width: 100%; }
 
 .story__content {
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end;
-  padding: 6rem 12rem; }
+  padding: 6rem 8vw;
+  display: grid;
+  align-content: center;
+  justify-items: start; }
+
+.story__text {
+  font-size: 1.5rem;
+  font-style: italic; }
 
 .homes {
   background-color: #101d2c;
