--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -10,14 +10,44 @@
 
 .home {
 	background-color: $color-grey-light-1;
+
+	display: grid;
+
+	grid-template-columns: repeat(2, 1fr);
 	&__img {
 		width: 100%;
+		grid-row: 1 / 2;
+		grid-column: 1 / -1;
+		z-index: 1;
 	}
 
 	&__like {
+		grid-row: 1 / 2;
+		grid-column: 2 / 3;
+		height: 2.5rem;
+		width: 2.5rem;
+		fill: $color-primary;
+		z-index: 50;
+		justify-self: end;
+		margin: 1rem;
 	}
 
 	&__name {
+		grid-row: 1 / 2;
+		grid-column: 1 / -1;
+		width: 80%;
+		justify-self: center;
+		align-self: end;
+		z-index: 3;
+
+		font-family: $font-display;
+		font-size: 1.6rem;
+		text-align: center;
+		padding: 1.25rem;
+		background-color: $color-secondary;
+		color: white;
+		font-weight: 400;
+		transform: translateY(50%);
 	}
 
 	&__location,
@@ -32,5 +62,9 @@
 
 		p {
 		}
+	}
+
+	&__btn {
+		grid-column: 1 / -1;
 	}
 }
