adding imaged to gallery

--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -14,6 +14,7 @@
 	display: grid;
 
 	grid-template-columns: repeat(2, 1fr);
+	grid-row-gap: 35px;
 	&__img {
 		width: 100%;
 		grid-row: 1 / 2;
@@ -51,16 +52,24 @@
 	}
 
 	&__location,
+	&__rooms {
+		margin-top: 2.5rem;
+	}
+
+	&__location,
 	&__rooms,
 	&__area,
 	&__price {
+		font-size: 1.5rem;
+		margin-left: 2rem;
+		display: flex;
+		align-items: center;
+
 		svg {
 			fill: $color-primary;
 			height: 2rem;
 			width: 2rem;
-		}
-
-		p {
+			margin-right: 1rem;
 		}
 	}
 
